--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="all.min.css" />
     <!--font awesome library-->
     <link rel="stylesheet" href="all.min.css" />
-    <link rel="icon" href="logo.jfif" type="image/jfif">
+    <link rel="icon" href="logo.jfif" type="image/png">
 </head>
 <body>
     <div class="image"><img src="logo.jfif" alt=""></div>
