--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="all.min.css" />
     <!--font awesome library-->
     <link rel="stylesheet" href="all.min.css" />
-    <link rel="icon" href="logo.jfif" type="image/png">
+    <link rel="icon" href="logo.png" type="image/png">
 </head>
 <body>
-    <div class="image"><img src="logo.jfif" alt=""></div>
+    <div class="image"><img src="logo.png" alt=""></div>
     <div class="overlay">
     <div id="particles-js">
         <div class="text-container">
